--- a/.github/ISSUE_TEMPLATE/privileged.yml
+++ b/.github/ISSUE_TEMPLATE/privileged.yml
@@ -1,19 +1,19 @@
 name: Privileged
-description: You are @tiangolo or he asked you directly to create an issue here. If not, check the other options. 👇
+description: You are @khulnasoft or he asked you directly to create an issue here. If not, check the other options. 👇
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for your interest in ReadyApi! 🚀
 
-        If you are not @tiangolo or he didn't ask you directly to create an issue here, please start the conversation in a [Question in GitHub Discussions](https://github.com/tiangolo/readyapi/discussions/categories/questions) instead.
+        If you are not @khulnasoft or he didn't ask you directly to create an issue here, please start the conversation in a [Question in GitHub Discussions](https://github.com/khulnasoft/readyapi/discussions/categories/questions) instead.
   - type: checkboxes
     id: privileged
     attributes:
       label: Privileged issue
       description: Confirm that you are allowed to create an issue here.
       options:
-        - label: I'm @tiangolo or he asked me directly to create an issue here.
+        - label: I'm @khulnasoft or he asked me directly to create an issue here.
           required: true
   - type: textarea
     id: content
