--- a/.github/workflows/label-approved.yml
+++ b/.github/workflows/label-approved.yml
@@ -6,13 +6,13 @@ on:
 
 jobs:
   label-approved:
-    if: github.repository_owner == 'tiangolo'
+    if: github.repository_owner == 'khulnasoft'
     runs-on: ubuntu-latest
     steps:
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
-    - uses: docker://tiangolo/label-approved:0.0.2
+    - uses: docker://khulnasoft/label-approved:0.0.2
       with:
-        token: ${{ secrets.FASTAPI_LABEL_APPROVED }}
+        token: ${{ secrets.READYAPI_LABEL_APPROVED }}
