--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.7"
 license = "MIT"
 authors = [
-    { name = "Sebastián Ramírez", email = "khulnasoft@gmail.com" },
+    { name = "Md Sulaiman", email = "infosulaimanbd@gmail.com" },
 ]
 classifiers = [
     "Intended Audience :: Information Technology",
